--- a/package.json
+++ b/package.json
@@ -3,18 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
-    "next": "15.4.5",
+    "next": "15.4.2-canary.46",
+    "next-auth": "5.0.0-beta.29",
     "openai": "^5.16.0",
     "postgres": "^3.4.7",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "react": "latest",
+    "react-dom": "latest",
     "zod": "^3.25.76"
   },
   "devDependencies": {
