--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "postgres": "^3.4.7",
     "react": "latest",
     "react-dom": "latest",
+    "react-icons": "^5.5.0",
     "zod": "^3.25.76"
   },
   "devDependencies": {
