--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "latest",
     "react-dom": "latest",
     "react-icons": "^5.5.0",
+    "react-loader-spinner": "^6.1.6",
     "zod": "^3.25.76"
   },
   "devDependencies": {
